# zeotap-assignment

./: README.md  docker-compose.yml
app1/: pyproject.toml
app1/src/zeotap/: ast.py  main.py  utils.py
app1/tests/: test_ast.py
app2/: package.json
app2/client/: package.json  pnpm-lock.yaml  vite.config.ts
app2/client/src/: App.tsx  App1.tsx  App2.tsx  Layout.tsx  index.css  main.tsx  types.d.ts
app2/client/src/components/: Header.tsx  LoginForm.tsx  RegisterForm.tsx  ThemeToggle.tsx  WeatherCard.tsx  WeatherModal.tsx
app2/client/src/components/ui/: date-picker.tsx
app2/client/src/lib/: actions.ts  ast.ts  utils.ts
app2/client/src/store/: auth.ts
app2/server/: package.json  pnpm-lock.yaml  tsconfig.json
app2/server/src/: index.ts  types.d.ts
app2/server/src/db/helpers/: daily-summary.ts  weather-data.ts
app2/server/src/db/models/: daily-summary.ts  user.ts  (+1 more)
app2/server/src/lib/: cache.ts  connectDB.ts  env.ts  openweather.ts
app2/server/src/routers/: auth.ts  index.ts  weather.ts
app2/server/src/sockets/: index.ts
app2/src/: App.tsx
client/: .dockerignore  Dockerfile  fly.toml  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo
client/src/: App1.tsx  App2.tsx  Layout.tsx  main.tsx
client/src/components/: WeatherCard.tsx  WeatherChart.tsx  WeatherModal.tsx
client/src/lib/: ast-regex.ts  ast.ts  store.ts  utils.ts
server/: .env.example  Dockerfile  fly.toml  package.json  pnpm-lock.yaml
server/src/: index.ts  types.d.ts
server/src/db/helpers/: weather-data.ts
server/src/lib/: cache.ts
server/src/routers/: index.ts
